[package]
name = "anymobile-print-helper"
version = "1.0.31"
description = "Desktop print helper for AnyMobile label printing"
authors = ["AnyMobile"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["cors"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tempfile = "3"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
